--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework 10</title>
-  </head>
-  <body>
-    <select class="breed-select"></select>
-    <p class="loader">Loading data, please wait...</p>
-    <p class="error">Oops! Something went wrong! Try reloading the page!</p>
-    <div class="cat-info"></div>
 
-    <script src="index.js" type="module"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Homework 10</title>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/slim-select/2.6.0/slimselect.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/css-loader/3.3.3/css-loader.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
+</head>
+
+<body>
+  <div class="container">
+    <h1>BUSCADOR DE MIRRINGOS <br>:3 </h1>
+    <div class="loader-container">
+      <div class="loader"></div>
+    </div>
+    <p class="error hidden">Oops! Something went wrong! Try reloading the page!</p>
+    <div class="select-container">
+      <select class="breed-select"></select>
+    </div>
+    <div class="cat-info hidden">
+      <h2 class="cat-name"></h2>
+      <p class="cat-description"></p>
+      <p class="cat-temperament"></p>
+      <!-- <img class="cat-image" src="" alt="Cat Image" /> -->
+    </div>
+  </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/slim-select/2.6.0/slimselect.min.js"></script>
+  <script src="index.js" type="module"></script>
+</body>
+
 </html>
